--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,13 +1,32 @@
-name: Hello World Workflow
+name: Code Quality Check
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  greeting:
+  code-check:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Print Hello World
-        run: echo "Hello World"
+      # Étape 1 : Vérifier le dépôt actuel
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Étape 2 : Configurer Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      # Étape 3 : Installer les dépendances
+      - name: Install Dependencies
+        run: npm install
+
+      # Étape 4 : Lancer linting
+      - name: Run Lint
+        run: npm run lint
