--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "A simple GitHub Action project with linting",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint './**/*.js'"
+    "lint": "eslint ."
   },
-  "dependencies": {},
   "devDependencies": {
-    "eslint": "^8.57.1"
+    "@eslint/js": "^9.17.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.19.1"
   },
   "author": "Your Name",
   "license": "MIT"
