--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "github-action",
+  "name": "hello-world-workflow",
   "version": "1.0.0",
-  "description": "A simple GitHub Action project with linting",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
-    "globals": "^15.14.0",
-    "typescript-eslint": "^8.19.1"
-  },
-  "author": "Your Name",
-  "license": "MIT"
+    "globals": "^15.14.0"
+  }
 }
